# nrs_ws

./: .gitignore
src/joint_control/: package.xml  setup.py
src/joint_control/joint_control/: fk_control.py  ik_control.py
src/joint_control/src/: basic_control.py  fk_control.py  fk_effort_control.py  ik_control.py  pub_effort.py  sub_joint_states.py
src/joint_control/urdf/: ur10.urdf.xacro
src/nrs_forcecon2/: CMakeLists.txt  package.xml
src/nrs_forcecon2/data/: KFfiltered_plot.py  KFfiltered_results.txt  raw_data.txt
src/nrs_forcecon2/include/nrs_forcecon2/: nrs_3step_faac.h  nrs_3stepfaac_map.h
src/nrs_forcecon2/src/: kf_acc_tester.cpp  nrs_3step_faac.cpp
src/nrs_ft_aq2/: CMakeLists.txt  README.md  package.xml
src/nrs_ft_aq2/config/: VR_config.yaml  config.yaml
src/nrs_ft_aq2/include/nrs_ft_aq2/: CAN_reader.hpp  CAN_sender.hpp  FT_Processing.hpp
src/nrs_ft_aq2/launch/: nrs_ft_aq.launch  nrsvr_ft_aq.launch
src/nrs_ft_aq2/measured/: Data1_plot.py
src/nrs_ft_aq2/msg/: ViveFTMsg.msg
src/nrs_ft_aq2/src/: CAN_reader.cpp  CAN_sender.cpp  FT_AQ_main.cpp  FT_Processing.cpp  FtProcessing.cpp  FtProcessing.h
src/nrs_gen_filter2/: CMakeLists.txt  package.xml
src/nrs_gen_filter2/include/nrs_gen_filter2/: Filter_applied.hpp  Gen_filter.hpp
src/nrs_gen_filter2/src/: Filter_applied.cpp  Gen_filter.cpp
src/nrs_ik/: CMakeLists.txt  package.xml
src/nrs_ik/src/: Arm_class.h  Kinematics.cpp  Kinematics.h  file_reader_node.cpp  forward_kinematics_node.cpp  interactive_ik_node.cpp  inverse_kinematics_node.cpp  test_fileopen  test_fileopen.cpp  txt_ik_executor.cpp  txt_trajectory_executor.cpp
src/nrs_msgmonitoring2/: CMakeLists.txt  README.txt  package.xml
src/nrs_msgmonitoring2/include/nrs_msgmonitoring2/: msg_monitoring.hpp
src/nrs_msgmonitoring2/recording/FAAC3step_msg/: mon1.txt  mon2.txt  mon3.txt
src/nrs_msgmonitoring2/scripts/: plot_recorded.py
src/nrs_msgmonitoring2/src/: msg_monitoring.cpp  test_main.cpp
src/nrs_path2/: CMakeLists.txt  README.md  package.xml
src/nrs_path2/data/: Mesh_center.txt  Ori_path.txt  Ori_path_projected.txt  Ori_path_projection.py  Ori_path_transformed.txt  Ori_path_translation.py  Projected_Path_Smooth.txt  final_waypoints.txt  final_waypoints_RPY.txt  geodesic_waypoints.txt  normal_plot.py  path_chak.py  plot_xyz.py  visual_final_waypoints.txt  xyzrpy_plot.py
src/nrs_path2/include/: nrs_callback.h  nrs_geodesic.h  nrs_interpolation.h  nrs_math.h  nrs_visualization.h
src/nrs_path2/launch/: display.launch.py  path_planning.launch.py  view_ur10e.launch.py
src/nrs_path2/mesh/: UR_EE_tool.stl  complex_surface_1.stl  complex_surface_2.usd  concave_surface_2.usd  convex_surface_1.stl  flat_surface_1.stl  flat_surface_2.stl  flat_surface_2.usd  flat_surface_3.stl  flat_surface_3.usd  flat_surface_4.stl  flat_surface_4.usd  flat_surface_5.usd  non_continuous_surface_1.stl
src/nrs_path2/rviz/: rviz_config.rviz
src/nrs_path2/src/: CMakeLists.txt  nrs_callback.cpp  nrs_callback.h  nrs_geodesic.cpp  nrs_geodesic.h  nrs_interpolation.cpp  nrs_interpolation.h  nrs_io.cpp  nrs_io.h  nrs_node_path_generation.cpp  nrs_node_simulation.cpp  nrs_node_visualization.cpp  nrs_simulation.cpp  nrs_visualization.cpp  nrs_visualization.h  path_projection.cpp  path_projection_1.cpp  yonoo.cpp
src/nrs_path2/urdf/: testbed.xacro  ur.xacro  ur10e.xacro
src/nrs_path2/urdf/inc/: ur10e_macro.xacro  ur_macro.xacro
src/nrs_planning2/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/nrs_planning2/src/: interpolation_node.cpp  planning_node.py
src/nrs_vision2/: CMakeLists.txt  package.xml
src/nrs_vision2/launch/: minimal_rviz_isaac_integration.launch.py  ur10_moveit_integration.launch.py
src/nrs_vision2/src/: forward_kinematics.cpp  listener.cpp  moveit_isaac_integration.cpp  talker.cpp
src/nrs_waypoint/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/nrs_waypoint/src/: pub_waypoint.py  waypoint_publisher.cpp
src/rtde_handarm2/: CMakeLists.txt  Required_setting  package.xml
src/rtde_handarm2/NRS_VR_data/NRS_CaliData/: UR10CB_VR.txt
src/rtde_handarm2/NRS_yaml/: NRS_Fcon_desired.yaml  NRS_Fcon_setting.yaml  NRS_Record_Printing.yaml  NRS_yaml_location.h
src/rtde_handarm2/data/: convert_txt_to_hdf5.py  hand_g_recording.txt  hand_g_recording_6.txt  trajectory.h5  visualize.py
src/rtde_handarm2/data/control_data/: DesPOri_handling.py  Hand_G_plot.py
src/rtde_handarm2/data/experiment_data/: test_path.txt
src/rtde_handarm2/launch/: Yoon_UARTcmd.launch  display.launch  display.launch.py
src/rtde_handarm2/meshes/: lid_wrap.STL  plate_wrap.STL  sample_wrap.STL
src/rtde_handarm2/msg/: Armmsg.msg  FtsensorMsg.msg  VRposRtMsg_Qua.msg  ftsensorMsg.msg  vive_ft_msg.msg
src/rtde_handarm2/rviz/: config.rviz
src/rtde_handarm2/src/: CMakeLists.txt  FtAcquisit.cpp  HbuttonCmd.cpp  JointControl.cpp  JointControl.h  NRSUR10eControl.cpp  NRSUR10eControl.h  NRSUR10eMain.cpp  NRS_Hbutton_cmd.cpp  NRS_Hbutton_cmd.h  ROSManager.cpp  ROSManager.h  VR_Hbutton_cmd.cpp  Yoon_FT_acquisit.cpp  Yoon_Hbutton_cmd.cpp  Yoon_UR10e_cmd.cpp  Yoon_UR10e_cmd.h  Yoon_UR10e_main.cpp  Yoon_UR10e_main.h  euichan_path_receiver.cpp  globals.cpp  node_joint_recorder.cpp  node_path_receiver.cpp  rtde_test.cpp  var_ur10e_main.cpp  var_ur10e_main.h
src/rtde_handarm2/src/Control_data/: DesPOri_handling.py  Descre_P_recording.txt  Hand_G_plot.py  Hand_G_recording.txt
src/rtde_handarm2/src/Experiment_data/: Data1.txt  test_path.txt
src/rtde_handarm2/src/NRS_Controller/: CMakeLists.txt  HbuttonCmd.cpp  HbuttonCmd.h  Hbutton_cmd.h  JointControl.cpp  JointControl.h  NRS_Hbutton_cmd.cpp  NRS_Hbutton_cmd.h  ROS_callbacks.cpp  Yoon_UR10e_cmd.cpp  Yoon_UR10e_cmd.h  func.cpp  func.h  main_variable.cpp  main_variable.h  node_Hbutton.cpp  node_h_button.cpp  node_path_receiver.cpp  node_ur10e_main.cpp  path_receiver.cpp  ur10e_main.cpp  var_ur10e_main.cpp  var_ur10e_main.h
src/rtde_handarm2/urdf/: robot.xacro
src/rtde_handarm2/yaml/: NRS_Fcon_desired.yaml  NRS_Record_Printing.yaml  NRS_UR10_IP.yaml  NRS_VR_setting.yaml  NRS_yaml_location.h
(+138 files in other folders)
