<package format="3">
  <name>nrs_msgmonitoring2</name>
  <version>0.1.0</version>
  <description>ROS 2 migration of MsgMonitoring tool</description>
  <maintainer email="you@example.com">Eunseop</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>yaml-cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
