<?xml version="1.0"?>
<package format="3">
  <name>nrs_vision2</name>
  <version>0.0.0</version>
  <description>Example package for Isaac Sim + Rviz integration</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- 빌드 도구 의존성 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 실행 시 필요한 의존성 (예시) -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>roslaunch</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
